# Nemotron-Tinker

./: .gitignore  README.md  pyproject.toml
clients/: nemotron_nano_api_smoke_client.py  qwen_api_smoke_client.py  rl_lora_workload_client.py
configs/: experimental_multinode_cluster.json
demos/: async_lora_demo.html
docs/: README.md  architecture.md  multinode.md  rl.md  sdk.md  setup.md  sft.md
prototypes/: nemotron_nano_mixed_lora_smoke.py
recipes/: nemotron_rl_lora.json  nemotron_sft_large.json  qwen_sft_quick.json
scripts/: deploy_gpu.sh  run_mixed_lora_server.py  run_recipe.py
skills/nemotron-tinker/: SKILL.md
src/nemotron_tinker/: __init__.py  client.py  cluster.py  future.py  grouped_lora_kernel.py  mixed_client.py  operator_ui.html  sdk.py  server.py  types.py  worker_manager.py
tests/: test_host_rl_launcher.py  test_tinker_api.py  test_tinker_api_server.py
tools/: benchmark_mixed_lora_backends.py  gym_rollouts_to_tinker_rl.py  host_rl_launcher.py
