[project]
name = "nemotron-tinker"
version = "0.1.0"
description = "Tinker-style API service, SDK, UI, demos, and recipes for LoRA training over NeMo AutoModel."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "pydantic",
  "requests",
  "torch",
  "transformers",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nemotron_tinker = ["operator_ui.html"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
markers = [
  "run_only_on(target): marks tests that require a specific runtime target, such as GPU",
]
